# raytracing

./: .gitignore  README.md
miniRT/: CMakeLists.txt  Makefile  main.c
miniRT/include/: canvas.h  color.h  event.h  intersect.h  linop.h  rayop.h  render.h  screenshot.h  shade.h  utils.h
miniRT/include/parsing/: cleanup.h  errors.h  parse.h  serialize.h  validate.h
miniRT/lib/libft/: Makefile  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_fequal.c  ft_fgt.c  ft_flt.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isfloatable.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_split_any.c  ft_splitf.c  ft_strchr.c  (+21 more)
miniRT/lib/libft/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
miniRT/scenes/1/: basic.rt  castle.rt  check.rt  cylinder.rt  h2o.rt  plane.rt  snowboy.rt  sphere.rt  test.rt  triangle.rt
miniRT/scenes/2/: cy.rt  cy_in_zero.rt  inside_sphere.rt  sp_in_zero.rt  sq_in_zeoro.rt  sqs.rt  t.rt  text.rt  tr.rt  training.rt  two_sp.rt  vistup.rt
miniRT/src/: screenshot.c
miniRT/src/parsing/: cleanup.c  errors.c  parse.c  serialize.c
miniRT/src/parsing/serializers/: serialize_a.c  serialize_c.c  serialize_cy.c  serialize_l.c  serialize_pl.c  serialize_r.c  serialize_sp.c  serialize_sq.c  serialize_tr.c
miniRT/src/parsing/serializers/helpers/: lst_figure_append.c  serialize_cy_rgb.c  serialize_orient.c  serialize_pl_rgb.c  serialize_point.c  serialize_rgb.c  serialize_sq_rgb.c
miniRT/src/parsing/validators/: valid_orient.c  valid_point3.c  valid_rgb.c
miniRT/src/rt/: canvas.c  color.c  colorex.c  event.c  intersect.c  light.c  linop.c  linopex.c  rayop.c  render.c  shade.c
miniRT/src/rt/utils/: alloca_to.c  calc_cylinder_min_t.c  calc_cylinder_orient.c  calc_faceted_orient.c  calc_min_t.c  calc_quad_equation.c  calc_ray_point.c  calc_sphere_orient.c  calc_triangle_orient.c  deg_to_rad.c  gen_square_vertices.c  get_cam.c  intersect_planar.c  is_polygon_point.c  isdir.c  look_at.c  mlx_reset_image.c  one_of.c  rad_to_deg.c  skip_spaces_str.c  swap_double.c
